Correct alignment bug on testimonials card

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -711,12 +711,14 @@ ul>.nav__item {
     font-size: 85%;
     font-weight: bold;
     position: relative;
-    height: 260px;
+    height: 300px;
 }
 
 .testimonials__content {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 40px 100px;
     position: absolute;
     opacity: 0;
